had to revert last commit

--- a/src/main/resources/assets/monsterbreeder/lang/en_us.json
+++ b/src/main/resources/assets/monsterbreeder/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-    "block.mosterbreeder.dna_altar": "DNA Altar",
+    "block.mosterbreeder.dna_altar": "DNA Altar"
 
-    "item.mosterbreeder.dna_sample": "%s DNA Sample"
+
 }
