bio reactor semi working

--- a/src/main/resources/assets/monsterbreeder/lang/en_us.json
+++ b/src/main/resources/assets/monsterbreeder/lang/en_us.json
@@ -6,6 +6,7 @@
     "item.monsterbreeder.used_syringe": "Used Syringe",
 
     "block.monsterbreeder.dna_altar": "DNA Altar",
+    "block.monsterbreeder.bio_reaction_chamber": "Bio Reaction Chamber",
 
     "dna.monsterbreeder.unknown": "Unknown",
 
