Add ender creeper (WIP)
Needs spawn egg model + new ai

I've added a DNA Extractor item which gives the DNA of the mob interacted with, no recipe.

--- a/src/main/resources/assets/monsterbreeder/lang/en_us.json
+++ b/src/main/resources/assets/monsterbreeder/lang/en_us.json
@@ -9,7 +9,9 @@
     "block.monsterbreeder.centrifuge": "Centrifuge",
     "block.monsterbreeder.bio_reaction_chamber": "Bio-Reaction Chamber",
 
-    "dna.monsterbreeder.unknown": "Unknown",
+    "entity.monsterbreeder.ender_creeper": "Ender Creeper",
+
+    "dna.minecraft.unknown": "Unknown",
 
     "monsterbreeder.jei.bio_reaction": "Bio-Reaction",
 
