Add separate item groups for items, eggs, and DNA
Split the original item group into three distinct groups: items, spawn eggs, and DNA samples. Updated the English localization to reflect the new group names for better organization and clarity in the UI.

(Commit message by Copilot)

--- a/src/main/resources/assets/monsterbreeder/lang/en_us.json
+++ b/src/main/resources/assets/monsterbreeder/lang/en_us.json
@@ -1,5 +1,7 @@
 {
-    "itemGroup.monsterbreeder": "Monster Breeder",
+    "itemGroup.monsterbreeder.items": "Monster Breeder - Items",
+    "itemGroup.monsterbreeder.eggs": "Monster Breeder - Spawn Eggs",
+    "itemGroup.monsterbreeder.dna": "Monster Breeder - DNA",
 
     "item.monsterbreeder.dna_sample": "%s DNA Sample",
     "item.monsterbreeder.dna_extractor": "DNA Extractor",
