Some changes (mainly to the DNA registry)
- Set item models to parent block models
- Added items to vanilla item groups
- Updated javadoc for Dna.java
- Replaced custom registry class with vanilla implementation

--- a/src/main/resources/assets/monsterbreeder/lang/en_us.json
+++ b/src/main/resources/assets/monsterbreeder/lang/en_us.json
@@ -15,8 +15,7 @@
 
     "entity.monsterbreeder.ender_creeper": "Ender Creeper",
 
-    "dna.minecraft.unknown": "Unknown",
-
+    "monsterbreeder.unknown": "Unknown",
     "monsterbreeder.bio_reaction": "Bio-Reaction",
     "monsterbreeder.blood": "%s Blood",
     "monsterbreeder.dna": "%s DNA",
