Code Refactor (fixes typos, grammar, and warnings)

--- a/src/main/resources/assets/monsterbreeder/lang/en_us.json
+++ b/src/main/resources/assets/monsterbreeder/lang/en_us.json
@@ -15,6 +15,7 @@
 
     "entity.monsterbreeder.ender_creeper": "Ender Creeper",
 
+    "monsterbreeder.mod_name": "Monster Breeder",
     "monsterbreeder.unknown": "Unknown",
     "monsterbreeder.bio_reaction": "Bio-Reaction",
     "monsterbreeder.blood": "%s Blood",
