Add collapsible entries to REI

--- a/src/main/resources/assets/monster_breeder/lang/en_us.json
+++ b/src/main/resources/assets/monster_breeder/lang/en_us.json
@@ -32,7 +32,9 @@
     "monster_breeder.bio_reaction": "Bio-Reaction",
     "monster_breeder.growth": "DNA Growth",
     "monster_breeder.blood": "%s Blood",
+    "monster_breeder.blood_samples": "Blood Samples",
     "monster_breeder.dna": "%s DNA",
+    "monster_breeder.dna_samples": "DNA Samples",
     "monster_breeder.dna_source": "Can be obtained from %s",
     "monster_breeder.mobs_only": "This only works on mobs!",
     "monster_breeder.unsupported_mob": "This mob is unsupported!",
